[package]
name = "sigil-gen"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4"
macroquad = "0.3"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase"] }
